--- a/android/build.gradle
+++ b/android/build.gradle
@@ -129,5 +129,5 @@ dependencies {
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-  compile 'com.github.livechat:chat-window-android:v2.0.4'
+  implementation 'com.github.livechat:chat-window-android:v2.1.2'
 }
